<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:background="@color/grey_c2"
        android:id="@+id/entity_root">

        <TextView
            android:id="@+id/entity_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black_c1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/entity_always_closed"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="29 Westheimer Rd. Santa Ana"/>

        <TextView
            android:id="@+id/entity_always_closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Open"/>

        <TextView
            android:id="@+id/available_parking_lot_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/grey_c3"
            android:textSize="12sp"
            android:text="@string/available_parking_lot"
            app:layout_constraintTop_toBottomOf="@+id/entity_address"
            app:layout_constraintStart_toStartOf="@+id/entity_address" />

        <TextView
            android:id="@+id/available_parking_lot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            android:textColor="@color/blue_c1"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/entity_address"
            app:layout_constraintStart_toEndOf="@+id/available_parking_lot_header"
            tools:text="52" />

        <TextView
            android:id="@+id/entity_price_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/grey_c3"
            android:textSize="12sp"
            android:text="@string/price"
            app:layout_constraintTop_toBottomOf="@+id/available_parking_lot_header"
            app:layout_constraintStart_toStartOf="@+id/available_parking_lot_header" />

        <TextView
            android:id="@+id/entity_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"
            android:textColor="@color/blue_c1"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/available_parking_lot_header"
            app:layout_constraintStart_toEndOf="@+id/entity_price_header"
            tools:text="2$/hour"/>

        <TextView
            android:id="@+id/entity_open_hours_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/grey_c3"
            android:textSize="12sp"
            android:text="@string/open_time"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/entity_price_header"
            app:layout_constraintStart_toStartOf="@+id/entity_price_header" />

        <TextView
            android:id="@+id/entity_open_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"
            android:textColor="@color/blue_c1"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/entity_price_header"
            app:layout_constraintStart_toEndOf="@+id/entity_open_hours_header" />

        <TextView
            android:id="@+id/entity_available_service_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/grey_c3"
            android:textSize="12sp"
            android:text="@string/available_service"
            app:layout_constraintTop_toBottomOf="@+id/entity_open_hours_header"
            app:layout_constraintStart_toStartOf="@+id/entity_open_hours_header" />

        <LinearLayout
            android:id="@+id/entity_available_service_liner_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/grey_c3"
            android:textSize="12sp"
            android:text="@string/available_service"
            app:layout_constraintTop_toBottomOf="@+id/entity_open_hours_header"
            app:layout_constraintStart_toEndOf="@+id/entity_available_service_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>