<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/grey_c2"
        android:id="@+id/entity_root">

        <TextView
            android:id="@+id/entity_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black_c1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/entity_always_closed"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="29 Westheimer Rd. Santa Ana"/>

        <TextView
            android:id="@+id/entity_always_closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Open"/>

        <TextView
            android:id="@+id/entity_connectors_number_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/grey_c3"
            android:textSize="12sp"
            android:text="@string/connectors_number"
            app:layout_constraintTop_toBottomOf="@+id/entity_address"
            app:layout_constraintStart_toStartOf="@+id/entity_address" />

        <TextView
            android:id="@+id/entity_connectors_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="6dp"
            android:textColor="@color/blue_c1"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/entity_address"
            app:layout_constraintStart_toEndOf="@+id/entity_connectors_number_header"
            tools:text="5" />

        <TextView
            android:id="@+id/entity_connectors_type_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/grey_c3"
            android:textSize="12sp"
            android:text="@string/connectors_type"
            app:layout_constraintTop_toBottomOf="@+id/entity_connectors_number_header"
            app:layout_constraintStart_toStartOf="@+id/entity_connectors_number_header" />

        <TextView
            android:id="@+id/entity_connectors_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="6dp"
            android:textColor="@color/blue_c1"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/entity_connectors_number_header"
            app:layout_constraintStart_toEndOf="@+id/entity_connectors_type_header"
            tools:text="CHAdeMO"/>

        <TextView
            android:id="@+id/entity_power_feed_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/grey_c3"
            android:textSize="12sp"
            android:text="@string/power_feed"
            app:layout_constraintTop_toBottomOf="@+id/entity_connectors_type_header"
            app:layout_constraintStart_toStartOf="@+id/entity_connectors_type_header" />

        <TextView
            android:id="@+id/entity_power_feed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="6dp"
            android:textColor="@color/blue_c1"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/entity_connectors_type_header"
            app:layout_constraintStart_toEndOf="@+id/entity_power_feed_header"
            tools:text="DC Fast"/>

        <TextView
            android:id="@+id/entity_charger_brand_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/grey_c3"
            android:textSize="12sp"
            android:text="@string/charger_brand"
            app:layout_constraintTop_toBottomOf="@+id/entity_power_feed_header"
            app:layout_constraintStart_toStartOf="@+id/entity_power_feed_header" />

        <TextView
            android:id="@+id/entity_charger_brand_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="6dp"
            android:textColor="@color/blue_c1"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/entity_power_feed_header"
            app:layout_constraintStart_toEndOf="@+id/entity_charger_brand_header"
            tools:text="eVgo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>